fix dynamic vercel cors'